--- a/candidates.html
+++ b/candidates.html
@@ -390,7 +390,7 @@
         <div class="row" style="padding-left:0%;">
           <div class="col-lg-4 col-md-6 wow fadeInUp">
             <div class="member">
-              <img src="assets/img/Prince.jpeg" class="img-fluid" id="prince" alt="">
+              <img src="assets/img/Prince.jpg" class="img-fluid" id="prince" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Prince Kumar</h4>
