--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
               </div>
             </div>
           </div>
-
           <div class="carousel-item">
             <div class="carousel-background"><img src="assets/img/intro-carousel/4.jpg" alt=""></div>
             <div class="carousel-container">
@@ -132,7 +131,6 @@
           <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-
         <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
           <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
@@ -177,7 +175,7 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>The election commission is mandated to foster the democratic spirit in the students’ self-governance set up - the Students’ Gymkhana. For upholding this spirit, it is necessary that the representatives of the students are elected by the process of free and fair elections.</p>
+          <p>The Students' Gymkhana, IIT Kanpur works through a system of democracy upheld through Gymkhana elections.We ensure a fair and smooth, end to end conduction of the Mid-Term Elections, the General Elections, HEC Elections etc.</p>
         </header>
 
         <div class="row about-cols">
@@ -190,7 +188,7 @@
               </div>
               <h2 class="title"><a href="#">Our Mission</a></h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                We are an independent body which manages free and fair elections for the various Gymkhana positions and other institutional sub committees through the student participation in this democratic process of casting votes via ballot.
               </p>
             </div>
           </div>
@@ -203,7 +201,7 @@
               </div>
               <h2 class="title"><a href="#">Our Plan</a></h2>
               <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                We would improve the efficiency of  our self governed body  so that elections are held in a fair and smooth manner and are well participated throughout the campus.
               </p>
             </div>
           </div>
@@ -216,7 +214,7 @@
               </div>
               <h2 class="title"><a href="#">Our Vision</a></h2>
               <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
+                The Election Commission of IIT Kanpur has distinguished itself over the years and is leading with constant improvements in the service and facilities it offers to all. We promote the knowledge of sound and democratic electoral processes and promote conditions conducive to free and fair elections.
               </p>
             </div>
           </div>
@@ -1260,40 +1258,32 @@
     <!-- ======= Skills Section ======= -->
     <!-- <section id="skills">
       <div class="container">
-
         <header class="section-header">
           <h3>Our Skills</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
         </header>
-
         <div class="skills-content">
-
           <div class="progress">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">HTML <i class="val">100%</i></span>
             </div>
           </div>
-
           <div class="progress">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">CSS <i class="val">90%</i></span>
             </div>
           </div>
-
           <div class="progress">
             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">JavaScript <i class="val">75%</i></span>
             </div>
           </div>
-
           <div class="progress">
             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">Photoshop <i class="val">55%</i></span>
             </div>
           </div>
-
         </div>
-
       </div>
     </section>End Skills Section -->
 
@@ -1362,8 +1352,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/nikunj.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/nikunj.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="ion ion-eye"></i></a>
-                <a href="https://drive.google.com/file/d/1GHzj1ZXDEXSF8cg6Gwkh2qJwwpDJex5r/view?usp=sharing" class="link-details" title="Manifesto" target="Blank"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1GHzj1ZXDEXSF8cg6Gwkh2qJwwpDJex5r/view?usp=sharing" class="link-details" target="Blank" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1377,8 +1366,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/mudit.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/mudit.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 3"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1392,8 +1380,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/inshu.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/inshu.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="App 2"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1_EnWycpvszje7Vo1pHFxpdj9FxhWKH7F/view?usp=sharing" class="link-details" target="Blank" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1407,8 +1394,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/vaibhav.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/vaibhav.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Card 2"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1voyLo2bT932r5fkT6Mks3_Yl0hZEG7hK/view?usp=sharing" class="link-details" target="Blank" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1422,8 +1408,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/bhavjeet.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/bhavjeet.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 2"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1pz8G-MK4yO-Jz6rU2WwOEZ2_Z5r_1Ur2/view?usp=sharing" class="link-details" target="Blank"  title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1437,8 +1422,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/ashish.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/ashish.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="App 3"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1E9ZL6zaDioeN4RjdwAq6ReFmAFfEnafX/view?usp=sharing" class="link-details" target="Blank" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1452,8 +1436,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/nachiket.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/nachiket.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Card 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/15OaQ1JuQXQWkc2cFb_0XZwkb2BvryJjD/view?usp=sharing" class="link-details" target="Blank" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1467,8 +1450,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/sana.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/sana.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Card 3"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1k_t1J8_zp_v-pXGm7e-sheKnwAi3N6Qj/view?usp=sharing" class="link-details" target="Blank"  title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1482,8 +1464,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/soumyaroop.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/soumyaroop.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1SG_YMfKvyQar9cGu6MUqIk-YEkD-JBt4/view?usp=sharing" class="link-details" target="Blank" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1496,8 +1477,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/siddharth.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/siddharth.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1AM2n-5NdO18tepxO_eYurThUXoZ2DUfj/view?usp=sharing" class="link-details" target="Blank" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1510,8 +1490,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/parth.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/parth.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="https://drive.google.com/file/d/1779FSxxtfsrHolflJYiihw5JsAeF2aDO/view?usp=sharing" class="link-details" target="Blank"  title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -1524,7 +1503,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/NOTA.png" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/NOTA.png" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
+                <!-- <a href="assets/img/NOTA.png" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a> -->
                 <!-- <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a> -->
               </figure>
 
@@ -1544,11 +1523,9 @@
     <!-- ======= Our Clients Section ======= -->
     <!-- <section id="clients" class="wow fadeInUp">
       <div class="container">
-
         <header class="section-header">
           <h3>Our Clients</h3>
         </header>
-
         <div class="owl-carousel clients-carousel">
           <img src="assets/img/clients/client-1.png" alt="">
           <img src="assets/img/clients/client-2.png" alt="">
@@ -1559,7 +1536,6 @@
           <img src="assets/img/clients/client-7.png" alt="">
           <img src="assets/img/clients/client-8.png" alt="">
         </div>
-
       </div>
     </section>End Our Clients Section -->
 
@@ -1980,4 +1956,5 @@
 </body>
 
 </html>
+
 
