--- a/candidates.html
+++ b/candidates.html
@@ -196,8 +196,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/nikunj.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/nikunj.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -211,8 +210,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/mudit.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/mudit.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 3"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -226,8 +224,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/inshu.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/inshu.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="App 2"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -241,8 +238,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/vaibhav.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/vaibhav.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Card 2"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -256,8 +252,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/bhavjeet.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/bhavjeet.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 2"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -271,8 +266,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/ashish.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/ashish.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="App 3"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -286,8 +280,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/nachiket.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/nachiket.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Card 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -301,8 +294,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/sana.jpg" class="img-fluid" alt="" style="width: 100%;">
-                <a href="assets/img/sana.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Card 3"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -316,8 +308,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/soumyaroop.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/soumyaroop.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -330,8 +321,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/siddharth.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/siddharth.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -344,8 +334,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/parth.jpg" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/parth.jpg" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -358,8 +347,7 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/NOTA.png" class="img-fluid" alt="" style="height: 100%; width: 100%;">
-                <a href="assets/img/NOTA.png" class="link-preview venobox" data-gall="portfolioGallery" title="Web 1"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="Manifesto"><i class="ion ion-android-open"></i></a>
+                <a href="#" class="link-details" title="More Details"><span><strong>Manifesto</strong></span></a>
               </figure>
 
               <div class="portfolio-info">
@@ -579,7 +567,8 @@
           <br><br>
         
         
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3570.474303534819!2d80.22718541437979!3d26.504866083304943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c3654fff567fb%3A0x611cf2a3c82ed75e!2sOpen%20Air%20Theatre%20(OAT)!5e0!3m2!1sen!2sin!4v1591473483262!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 500px" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3570.474303534819!2d80.22718541437979!3d26.504866083304943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c3654fff567fb%3A0x611cf2a3c82ed75e!2sOpen%20Air%20Theatre%20(OAT)!5e0!3m2!1sen!2sin!4v1591473483262!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 500px" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3570.4726098647498!2d80.22715541487396!3d26.504920583305005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c3654ff75b5b3%3A0x318bc81e56e0da51!2sNew%20Student%20Activity%20Center%2C%20Indian%20Institute%20of%20Technology%20Kanpur%20(IIT%20Kanpur)%2C%20Kalyanpur%2C%20Kanpur%2C%20Uttar%20Pradesh%20208016!5e0!3m2!1sen!2sin!4v1591987720293!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </div>
     </section><!-- End Contact Section -->
@@ -684,3 +673,4 @@
 </body>
 
 </html>
+
